# OpenQuant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: env.bashrc.example  model.yaml.example  trading.yaml  watchlist.example.txt  watchlist.txt
docs/: COMMANDS.md  CONFIG.md  DATA_QUALITY.md
notebooks/: backtest.ipynb  performance.ipynb
scripts/: run.ps1
src/: __init__.py  main.py
src/analyzer/: __init__.py  minimax_client.py  prompt_builder.py  response_parser.py
src/config/: __init__.py  loader.py  paths.py
src/core/: __init__.py  models.py  trading_system.py
src/data/: __init__.py  akshare_fetcher.py  cache_manager.py  technical_indicators.py
src/execution/: __init__.py  live_trader.py  order_manager.py  paper_trader.py
src/notification/: __init__.py  dingtalk.py  feishu.py
src/risk/: __init__.py  position_sizer.py  risk_engine.py
src/ui/: __init__.py  cli.py  web_dashboard.py
tests/: test_analyzer.py  test_execution.py  test_risk.py
